[gd_scene load_steps=9 format=3 uid="uid://dx1itp3kt04w3"]

[ext_resource type="Script" path="res://UI.gd" id="1_wqcf6"]
[ext_resource type="Texture2D" uid="uid://bqlc1j0rbnpxr" path="res://sprites/icons/shop.png" id="2_3wub4"]
[ext_resource type="Texture2D" uid="uid://ds584rdb0q7et" path="res://sprites/icons/inv.png" id="4_e5w1b"]
[ext_resource type="Texture2D" uid="uid://cr1k8hl6q7m14" path="res://sprites/icons/home.png" id="4_sfew1"]
[ext_resource type="Script" path="res://points.gd" id="5_6742j"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4u7cv"]
size = Vector2(256, 350)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_k8qbu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrf8u"]
size = Vector2(192, 62)

[node name="Basic UI" type="CanvasLayer"]
script = ExtResource("1_wqcf6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = -1
anchor_top = 0.863
anchor_right = 1.0
anchor_bottom = 0.994
offset_top = -68.48
offset_right = 8.0
offset_bottom = -19.8201

[node name="Panel" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 155)
layout_mode = 2

[node name="Shop" type="TouchScreenButton" parent="HBoxContainer/Panel"]
position = Vector2(95, 110)
scale = Vector2(0.75, 0.609375)
shape = SubResource("RectangleShape2D_4u7cv")

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/Panel"]
position = Vector2(100, 110)
scale = Vector2(0.585936, 0.546875)
texture = ExtResource("2_3wub4")

[node name="Panel2" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="Home" type="TouchScreenButton" parent="HBoxContainer/Panel2"]
position = Vector2(95, 109.74)
scale = Vector2(9.8, 11)
shape = SubResource("RectangleShape2D_k8qbu")

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/Panel2"]
position = Vector2(95, 109.74)
scale = Vector2(0.871092, 0.816014)
texture = ExtResource("4_sfew1")

[node name="Panel3" type="Panel" parent="HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2

[node name="Inventory" type="TouchScreenButton" parent="HBoxContainer/Panel3"]
position = Vector2(91, 109.74)
scale = Vector2(1, 3.5)
shape = SubResource("RectangleShape2D_qrf8u")

[node name="Sprite2D" type="Sprite2D" parent="HBoxContainer/Panel3"]
position = Vector2(98, 109.74)
scale = Vector2(0.602444, 0.546524)
texture = ExtResource("4_e5w1b")

[node name="Label" type="Label" parent="."]
offset_left = 386.0
offset_top = 29.0
offset_right = 533.0
offset_bottom = 73.0
script = ExtResource("5_6742j")

[connection signal="released" from="HBoxContainer/Panel/Shop" to="." method="_on_shop_released"]
[connection signal="released" from="HBoxContainer/Panel2/Home" to="." method="_on_home_released"]
[connection signal="released" from="HBoxContainer/Panel3/Inventory" to="." method="_on_inventory_released"]
